Import of BOMBARELY/R-YapRI-0.02 from CPAN.
gitpan-cpan-distribution: R-YapRI
gitpan-cpan-version:      0.02
gitpan-cpan-path:         BOMBARELY/R-YapRI-0.02.tar.gz
gitpan-cpan-author:       BOMBARELY
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -16,9 +16,12 @@ meta-spec:
   version: 1.4
 name: R-YapRI
 provides:
+  R::YapRI:
+    file: lib/R/YapRI.pm
+    version: 0.01
   R::YapRI::Base:
     file: lib/R/YapRI/Base.pm
-    version: 0.01
+    version: 0.02
   R::YapRI::Block:
     file: lib/R/YapRI/Block.pm
     version: 0.01
@@ -35,4 +38,4 @@ requires:
   perl: v5.10.0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.01
+version: 0.02
