--- a/META.yml
+++ b/META.yml
@@ -4,9 +4,11 @@ author:
   - 'Aureliano Bombarely'
 build_requires:
   Image::Size: 0
+  String::Random: 0
   Test::Exception: 0
   Test::More: 0
   Test::Warn: 0
+  autodie: 0
 configure_requires:
   Module::Build: 0.36
 generated_by: 'Module::Build version 0.3607'
@@ -18,24 +20,24 @@ name: R-YapRI
 provides:
   R::YapRI:
     file: lib/R/YapRI.pm
-    version: 0.02
+    version: 0.03
   R::YapRI::Base:
     file: lib/R/YapRI/Base.pm
-    version: 0.03
+    version: 0.04
   R::YapRI::Block:
     file: lib/R/YapRI/Block.pm
-    version: 0.02
+    version: 0.03
   R::YapRI::Data::Matrix:
     file: lib/R/YapRI/Data/Matrix.pm
-    version: 0.02
+    version: 0.03
   R::YapRI::Graph::Simple:
     file: lib/R/YapRI/Graph/Simple.pm
-    version: 0.02
+    version: 0.03
   R::YapRI::Interpreter::Perl:
     file: lib/R/YapRI/Interpreter/Perl.pm
-    version: 0.02
+    version: 0.03
 requires:
   perl: v5.10.0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.03
+version: 0.04
