--- a/META.yml
+++ b/META.yml
@@ -37,7 +37,8 @@ provides:
     file: lib/R/YapRI/Interpreter/Perl.pm
     version: 0.04
 requires:
-  perl: v5.10.0
+  perl: v5.8.0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.05
+  repository: https://github.com/solgenomics/yapri
+version: 0.06
