--- a/META.yml
+++ b/META.yml
@@ -3,6 +3,7 @@ abstract: 'Yet another perl R interface'
 author:
   - 'Aureliano Bombarely'
 build_requires:
+  File::Path: 2
   Image::Size: 0
   String::Random: 0
   Test::Exception: 0
@@ -41,4 +42,4 @@ requires:
 resources:
   license: http://dev.perl.org/licenses/
   repository: https://github.com/solgenomics/yapri
-version: 0.06
+version: 0.07
